# Steganography

./: .gitignore  README.md  docker-compose.yaml  nginx.conf
backend/: CMakeLists.txt  Dockerfile  cors.h  logic.cpp  main.cpp
backend/routes/: encode.h  file.h
docker/: Dockerfile  backend.Dockerfile  frontend.Dockerfile
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js
frontend/src/components/: UploadForm.jsx
include/: FileManager.h
src/: CMakeLists.txt  SteganographyApp.cpp  main.cpp  main.h  test.txt
src/controller/: CMakeLists.txt  MainController.cpp  MainController.h
src/core/: FileManager.cpp  main.cpp
src/model/: CMakeLists.txt  SteganographyLogic.cpp  SteganographyLogic.h  logic_description.txt
src/view/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.ui
test/: test.txt
